adding npm button on header

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h1 class="project-name">hlsdownloader</h1>
       <h2 class="project-tagline">Downloads HLS Playlist file and TS chunks</h2>
       <a href="https://github.com/nmrony/hlsdownloader" class="btn">View on GitHub</a>
+      <a href="https://www.npmjs.com/package/hlsdownloader" class="btn">View on NPM</a>
       <a href="https://github.com/nmrony/hlsdownloader/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/nmrony/hlsdownloader/tarball/master" class="btn">Download .tar.gz</a>
     </section>
@@ -80,6 +81,6 @@ pull requests. I am all ears!!</p>
 
     </section>
 
-  
+
   </body>
 </html>
